[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winter-storm-uri-demo"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
    "arraylake",
    "icechunk",
    "marimo",
    "dask",
    "flox",
    "matplotlib",
    "zarr",
    "xarray",
    "numpy",
    "marimo",
    "cartopy>=0.25.0",
    "openpyxl>=3.1.5",
]

[tool.setuptools]
py-modules = ["energy", "plot", "demand"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["*.ipynb", "demand.py", "production.py"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
exclude = ["demand.py", "production.py"]
